syntax = "proto3";

package blockchain;

option go_package = "sortedstartup.com/simple-blockchain/proto";

// ------------------ TRANSACTION ------------------

message Transaction {
  string txid = 1;
  string sender = 2;
  string recipient = 3;
  uint64 amount = 4;
  uint64 fee = 5;
  int64 timestamp = 6;
  bytes signature = 7;
  bytes public_key = 8;
}

message SubmitTransactionRequest {
  Transaction transaction = 1;
}

message SubmitTransactionResponse {
  bool success = 1;
  string message = 2;
}

service BlockchainService {
    rpc SubmitTransaction(SubmitTransactionRequest) returns (SubmitTransactionResponse);
}